styles: fix scrollbars being always visible on some browsers

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,7 +39,7 @@ body {
 }
 
 #app {
-    @apply overflow-y-scroll bg-gray-200 grid grid-cols-1 lg:grid-cols-[minmax(250px,1fr)_4fr] grid-rows-[auto_auto_1fr] lg:grid-rows-[auto_1fr_auto] items-center font-inter w-[90%] xl:w-2/3 rounded-2xl border-3 border-dashed shadow-2xl grow;
+    @apply overflow-y-auto bg-gray-200 grid grid-cols-1 lg:grid-cols-[minmax(250px,1fr)_4fr] grid-rows-[auto_auto_1fr] lg:grid-rows-[auto_1fr_auto] items-center font-inter w-[90%] xl:w-2/3 rounded-2xl border-3 border-dashed shadow-2xl grow;
 }
 
 .todo-groups {
@@ -55,7 +55,7 @@ body {
 }
 
 .todo-main {
-    @apply flex flex-col overflow-y-scroll lg:px-4 lg:col-start-2 lg:row-start-2 self-stretch row-span-2 relative bg-gray-100;
+    @apply flex flex-col overflow-y-auto lg:px-4 lg:col-start-2 lg:row-start-2 self-stretch row-span-2 relative bg-gray-100;
 }
 
 .empty-msg {
@@ -72,11 +72,11 @@ body {
 }
 
 #add-new-todo {
-    @apply flex flex-row items-center text-xl bg-green-600 rounded-full text-gray-100 cursor-pointer p-2 hover:bg-green-700;
+    @apply border-2 border-green-700 flex flex-row items-center text-xl bg-green-600 rounded-full text-gray-100 cursor-pointer p-2 hover:bg-green-700;
 }
 
 .todo-list {
-    @apply empty:hidden flex flex-col overflow-y-scroll;
+    @apply empty:hidden flex flex-col overflow-y-auto;
 }
 
 .todo-item {
@@ -195,7 +195,7 @@ form>div {
 }
 
 #add-new-group {
-    @apply self-center mx-4 lg:mx-auto my-4 font-bold row-start-3 row-end-4 col-start-1 col-end-2 flex flex-row items-center text-gray-100 bg-blue-600 p-2 rounded-full cursor-pointer hover:bg-blue-700;
+    @apply border-2 border-blue-700 self-center mx-4 lg:mx-auto my-4 font-bold row-start-3 row-end-4 col-start-1 col-end-2 flex flex-row items-center text-gray-100 bg-blue-600 p-2 rounded-full cursor-pointer hover:bg-blue-700;
 }
 
 button .button-desc {
@@ -234,11 +234,11 @@ button span {
 }
 
 .todo-groups-list {
-    @apply w-full empty:invisible lg:border-b-2 border-gray-400 bg-gray-300 p-4 hidden lg:flex flex-col gap-4 overflow-x-scroll lg:overflow-y-scroll items-center grow;
+    @apply w-full empty:invisible lg:border-b-2 border-gray-400 bg-gray-300 p-4 hidden lg:flex flex-col gap-4 lg:overflow-y-auto items-center grow;
 }
 
 .todo-group-item {
-    @apply items-center w-full text-gray-700 bg-gray-100 hover:bg-sky-200 border-gray-500 border rounded-xl p-2 font-normal grid grid-cols-2 break-words;
+    @apply cursor-pointer items-center w-full text-gray-700 bg-gray-100 hover:bg-sky-200 border-gray-500 border rounded-xl p-2 font-normal grid grid-cols-2 break-words;
 }
 
 .todo-group-buttons {
